; ModuleID = '/home/carl/AnghaBench/linux/block/extr_bfq-iosched.c_bfq_depth_updated.c'
source_filename = "/home/carl/AnghaBench/linux/block/extr_bfq-iosched.c_bfq_depth_updated.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blk_mq_hw_ctx = type { %struct.blk_mq_tags*, %struct.TYPE_4__* }
%struct.blk_mq_tags = type { i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.bfq_data* }
%struct.bfq_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.blk_mq_hw_ctx*)* @bfq_depth_updated to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfq_depth_updated(%struct.blk_mq_hw_ctx* %0) #0 {
  %2 = alloca %struct.blk_mq_hw_ctx*, align 8
  %3 = alloca %struct.bfq_data*, align 8
  %4 = alloca %struct.blk_mq_tags*, align 8
  %5 = alloca i32, align 4
  store %struct.blk_mq_hw_ctx* %0, %struct.blk_mq_hw_ctx** %2, align 8
  %6 = load %struct.blk_mq_hw_ctx*, %struct.blk_mq_hw_ctx** %2, align 8
  %7 = getelementptr inbounds %struct.blk_mq_hw_ctx, %struct.blk_mq_hw_ctx* %6, i32 0, i32 1
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load %struct.bfq_data*, %struct.bfq_data** %11, align 8
  store %struct.bfq_data* %12, %struct.bfq_data** %3, align 8
  %13 = load %struct.blk_mq_hw_ctx*, %struct.blk_mq_hw_ctx** %2, align 8
  %14 = getelementptr inbounds %struct.blk_mq_hw_ctx, %struct.blk_mq_hw_ctx* %13, i32 0, i32 0
  %15 = load %struct.blk_mq_tags*, %struct.blk_mq_tags** %14, align 8
  store %struct.blk_mq_tags* %15, %struct.blk_mq_tags** %4, align 8
  %16 = load %struct.bfq_data*, %struct.bfq_data** %3, align 8
  %17 = load %struct.blk_mq_tags*, %struct.blk_mq_tags** %4, align 8
  %18 = getelementptr inbounds %struct.blk_mq_tags, %struct.blk_mq_tags* %17, i32 0, i32 0
  %19 = call i32 @bfq_update_depths(%struct.bfq_data* %16, i32* %18)
  store i32 %19, i32* %5, align 4
  %20 = load %struct.blk_mq_tags*, %struct.blk_mq_tags** %4, align 8
  %21 = getelementptr inbounds %struct.blk_mq_tags, %struct.blk_mq_tags* %20, i32 0, i32 0
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @sbitmap_queue_min_shallow_depth(i32* %21, i32 %22)
  ret void
}

declare dso_local i32 @bfq_update_depths(%struct.bfq_data*, i32*) #1

declare dso_local i32 @sbitmap_queue_min_shallow_depth(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
